Changelog

1.8.0.3
	Fixed total unresponsiveness of mod 
	Fixed error when the "Previous Best Settings" was pressed when there weren't any 

1.8.0.2
	Updated .gitignore which was preventing the GameData from being updated

1.8.0.1
	Fixed missing textures for toolbar buttons
	Changed to allow window dragging from anywhere in the window

1.8.0
	Merged in FAR compatibility chagnes by @ildifa
	Adoption by Linuxgurugamer
	Reorganized directories slightly
	Added Changelog.txt, deploy.bat, GravityTurn.version, deploy.bat, buildRelease.bat, AssemblyVersion.tt
	Replaced InstallChecker with updated version
	Added support for Toolbarcontroller
	Fixed nullref in CopyCompactSkin due to uninitialized skin
	Changed backslashes to forward slashes for the stored config files (needed for OSX/Linux)
	FOLLOWING CHANGE INCOMPATIBLE WITH PREVIOUS VERSIONS
		Moved storage directory from GravityTurn/Plugins/PluginData/GravityTurn/" + sub to "/GameData/GravityTurn/PluginData/" + sub


1.7.7
	Recompiled for KSP 1.4.
		NOT compatible with earlier versions of KSP any more!

1.7.6
	hotfix for issue #36 (delayed roll)

1.7.5
	Delay roll program until initial height of vessel is reached.
	Add CKAN suppory
	Launch heading for orbits with inclinations overcompensate at start of launch.
	Show orbital stats like apoapsis, periapsis and inclinatio
	Stuttering issue
	Windows don't hide when pressing F
	Improve Guess doesn't work properly

1.7.2
	Calculation for start speed is based on current surface gravity
	bugfix: topmost fairings were always staging
	bugfix: "improve guess" didn't always improve because of duplicate launch db entries.

1.7.1
	Storing default parameters for new crafts
	locking parameters so they are not overwritten.
	autostaging of top fairings and interstage fairings.
	option to speedup of launches via timewarp
	smother pitching maneuvers
	Some bugfixes (like the problem with detecting other mods).

1.7