@@ -3,6 +3,7 @@ Changelog
 1.8.0.3
 	Fixed total unresponsiveness of mod 
 	Fixed error when the "Previous Best Settings" was pressed when there weren't any 
+	Added settings page (stock settings) to allow selection of compact skin (default) normal or stock skin
 
 1.8.0.2
 	Updated .gitignore which was preventing the GameData from being updated
